# fullstack_shop_movies

./: .env  Cargo.toml  Makefile.toml  Shuttle.toml  api.http
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs
api/repository/: Cargo.toml
api/repository/src/: film_repository.rs  lib.rs
api/repository/src/film_repository/: memory_film_repository.rs  mod.rs  postgres_film_repository.rs
api/shuttle/: .gitignore  Cargo.toml
api/shuttle/src/: main.rs
front/: Cargo.toml  package-lock.json
front/public/: tailwind.css
front/src/: main.rs
front/src/components/: film_card.rs  film_modal.rs  header.rs
front/src/services/: films.rs  mod.rs
shared/: Cargo.toml
shared/src/: models.rs
