[workspace]
members  = ["api/lib", "api/repository", "api/shuttle", "shared", "front"]
resolver = "2"

[workspace.dependencies]
# internal
api-lib        = { version = "0.1.0", path = "./api/lib" }
api-repository = { version = "0.1.0", path = "./api/repository" }
shared         = { version = "0.1.0", path = "./shared" }

axum       = { version = "0.6", features = ["tracing"] }
axum-extra = { version = "0.7" }
tokio      = "1.29"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }

sqlx = { version = "0.6", default-features = false, features = [
  "runtime-actix-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }

# serde
serde = { version = "1.0.164", features = ["derive"] }

# utils
chrono  = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid    = { version = "1.3.4", features = ["serde", "v4", "js"] }
