[package]
edition = "2021"
name    = "front"
version = "0.1.0"

[dependencies]
shared = { workspace = true }

serde = { workspace = true }
uuid  = { workspace = true }

dioxus         = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-signals = { git = "https://github.com/DioxusLabs/dioxus" }
dioxus-web     = { git = "https://github.com/DioxusLabs/dioxus" }

log         = "0.4"
reqwest     = { version = "0.11.18", features = ["json"] }
wasm-logger = "0.2"
web-sys     = "0.3.64"
