[package]
edition = "2021"
name    = "api-lib"
version = "0.1.0"

[dependencies]
api-repository = { workspace = true }

axum = { workspace = true }

# serde
serde      = { workspace = true }
serde_json = "1.0"

# tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
