[package]
edition = "2021"
name    = "api-repository"
version = "0.1.0"

[dependencies]
shared = { workspace = true, features = ["backend"] }

async-trait = "0.1"
chrono      = { workspace = true }
sqlx        = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
