[package]
edition = "2021"
name    = "moviedevexperience"
version = "0.1.0"

[dependencies]
# internal
api-lib = { workspace = true }

axum = { version = "0.6", features = ["tracing"] }
shuttle-axum = "0.20"
shuttle-runtime = "0.20"
shuttle-shared-db = { version = "0.20", features = ["postgres"] }
sqlx = { version = "0.6", default-features = false, features = [
  "runtime-actix-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
tokio = "1.29"

tower-http = { version = "0.4.0", features = ["trace"] }
tracing    = "0.1"
