[package]
edition = "2021"
name    = "moviedevexperience"
version = "0.1.0"

[dependencies]
# internal
api-lib = { workspace = true }

shuttle-axum      = "0.20"
shuttle-runtime   = "0.20"
shuttle-shared-db = { version = "0.20", features = ["postgres"] }

axum       = { workspace = true }
sqlx       = { workspace = true }
tokio      = { workspace = true }
tower-http = { version = "0.4.0", features = ["trace"] }

tracing = { workspace = true }
